--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+/.firebase
 
 # misc
 .DS_Store
@@ -21,3 +22,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+src/env.json
+
+firebase.jsonfirebase.indexes.json
+firestore.rules
+storage.rules
+yarn.lock
